fix the dark mode

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -5,8 +5,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --font-gtsuper-medium: 'GT Super', Georgia, 'Times New Roman', Times, serif;
-  --font-sohneone: 'Sohne', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  --font-gtsuper-medium: "GT Super", Georgia, "Times New Roman", Times, serif;
+  --font-sohneone: "Sohne", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -94,16 +95,16 @@ body {
 }
 
 @font-face {
-  font-family: 'GT Super';
-  src: url('/fonts/GT-Super/GT-Super-Display-Regular-Trial.woff2') format('woff2');
+  font-family: "GT Super";
+  src: url("/fonts/GT-Super/GT-Super-Display-Regular-Trial.woff2")
+    format("woff2");
   font-weight: 100 900;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Sohne';
-  src: url('/fonts/sohne/sohneone.woff2') format('woff2');
+  font-family: "Sohne";
+  src: url("/fonts/sohne/sohneone.woff2") format("woff2");
   font-weight: 100 900;
   font-display: swap;
 }
-
